# Projects

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
conf/: pipeline.windows-local.yml  pipeline.yml
data/raw/: claims_sample.csv  members_sample.csv  providers_sample.csv
docs/: architecture.md  orchestration.md
orchestration/airflow/dags/: healthcare_medallion_dag.py
sql/bronze/: claims_raw_quality_checks.sql  members_raw_quality_checks.sql  providers_raw_quality_checks.sql
sql/gold/: monthly_claim_cost_summary.sql  provider_specialty_summary.sql
sql/silver/: claim_quality_metrics.sql  member_claims_enriched.sql
src/healthcare_medallion/: __init__.py  config.py  incremental.py  io.py  pipeline.py  quality.py  schemas.py  spark.py
src/healthcare_medallion/jobs/: __init__.py  bronze.py  gold.py  silver.py
tests/: conftest.py  test_config.py  test_incremental.py  test_pipeline.py  test_quality.py  test_silver_transforms.py
